--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/node": "^22.10.6",
     "@types/autosuggest-highlight": "^3.2.3",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
